<resources>
    <!-- global strings -->
    <string name="app_name">AndroCom</string>
    <string name="app_version">Version 1.0.1</string>
    <string name="app_copyright">©2023-2024 AndroCom Inc.</string>
    <string name="app_info">Messages, Voice Calls &amp; Video Calls without Internets</string>
    <string name="navigation_one">Chats</string>
    <string name="navigation_two">Calls</string>
    <string name="navigation_three">Settings</string>
    <string name="blokedips">Blocked IPs</string>
    <!-- main screen strings -->
    <string name="get_started_button">Get Started</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_name">Edit Username</string>

    <!-- setting up screen strings -->
    <string name="setting_up_message">Welcome to AndroCom! Please enter your first and last name to get started.</string>
    <string name="setting_up_input_label_1">First Name</string>
    <string name="setting_up_input_placeholder_1">Enter your First Name</string>
    <string name="setting_up_input_label_2">Last Name</string>
    <string name="setting_up_input_placeholder_2">Enter your Last Name</string>
    <string name="setting_up_button">Continue</string>

    <!-- home screen -->
    <string name="home_screen_title">Chats</string>

    <!-- app settings screen -->
    <string name="app_settings_title">Settings</string>
    <string name="account_settings_title">Account</string>
    <string name="account_settings_description">Edit Account Information</string>
    <string name="BlockedUsers">Blocked IPs</string>
    <string name="blocked_ip_description">View or Edit Blocked IPs</string>
    <string name="notification_settings_title">Notifications</string>
    <string name="notification_settings_description">Enable or Disable Notifications</string>
    <string name="help_settings_title">About</string>
    <string name="help_settings_description">App Version &amp; Licensing</string>

    <!-- calls history screen -->
    <string name="calls_screen_title">Calls</string>

    <!-- chating screen -->
    <string name="chat_input_placeholder">Message</string>

    <!-- active users screen -->
    <string name="active_screen_title">Active Devices</string>

    <!-- chat account screen -->
    <string name="contact_name_label">Device Name</string>
    <string name="contact_encryption_title">Encryption</string>
    <string name="contact_encryption_description">Messages are end-to-end encrypted via Advanced Encryption Standard.</string>
    <string name="contact_mac_address_title">MAC Address</string>
    <string name="contact_notification_title">Mute Notifications</string>
    <string name="contact_block_title">Block MAC Address</string>

    <!-- help screen -->
    <string name="license_button_title">License</string>
    <string name="license">AndroCom Application License Agreement\n\n
    This AndroCom Application License Agreement (&quot;Agreement&quot;) is entered into by and between Malik Umer, Ahmed, Muhammad, Harris, and Wasia (hereinafter collectively referred to as &quot;Developers&quot;) and you (hereinafter referred to as &quot;User&quot; or &quot;You&quot;) for the use of the AndroCom mobile application (hereinafter referred to as &quot;Application&quot;).\n\n\n
    1. License Grant\n
    Subject to the terms and conditions of this Agreement, the Developers hereby grant you a worldwide, royalty-free, non-exclusive, perpetual (for the duration of applicable international laws) license to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Application.\n\n\n
    2. Limitations\n
    You agree that the Application is provided &quot;as is&quot;, without warranty of any kind, express or implied, including but not limited to the warranties of merchantability, fitness for a particular purpose, and non-infringement. In no event shall the Developers or copyright holders be liable for any claim, damages, or other liability, whether in an action of contract, tort, or otherwise, arising from, out of, or in connection with the Application or the use or other dealings in the Application.\n\n\n
    3. Attribution\n
    You agree to retain all copyright notices and license information pertaining to the Application and any modifications made to it.\n\n\n
    4. Governing Law\n
    This Agreement shall be governed by and construed in accordance with the international laws, without regard to its conflict of law provisions.\n\n\n
    5. Termination\n
    The license granted herein shall automatically terminate if you violate any of the terms and conditions of this Agreement. Upon termination, you must immediately cease all use of the Application and destroy any copies of the Application in your possession.\n\n\n
    6. Severability\n
    If any provision of this Agreement is held to be unenforceable or invalid, the remaining provisions shall remain in full force and effect.\n\n\n
    7. Entire Agreement\n
    This Agreement constitutes the entire agreement between you and the Developers regarding the subject matter hereof and supersedes all prior or contemporaneous agreements, representations, warranties, and understandings.\n\n\n
    By installing, accessing, or using the AndroCom Application, you acknowledge that you have read, understood, and agree to be bound by the terms and conditions of this Agreement.\n\n\n
    Effective Date: February 13, 2024</string>


    <string name="communication">P2P Communication Without Internet</string>
    <string name="getstarted">Get Started</string>
    <string name="welcome">Welcome to AndroCom!</string>
    <string name="entername"><![CDATA[Enter your First Name & Last Name]]></string>
    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="cont">Continue</string>
    <string name="chat">Chats</string>
    <string name="search">Search</string>
    <string name="setting">Settings</string>
    <string name="Call">Calls</string>
    <string name="first_name_input_desc">Enter your first name</string>
    <string name="last_name_input_desc">Enter your last name</string>
    <string name="title_activity_settings">Settings_activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="account">Account</string>
    <string name="edit">Edit Profile,Unblock Users</string>
    <string name="traffic">Traffic Prioritization</string>
    <string name="activate">Activate Traffic Prioritization</string>
    <string name="notification">Notifications</string>
    <string name="others">Message,calls and others</string>
    <string name="help">Help</string>
    <string name="privacy">Privacy Policy</string>
    <string name="active">Active Users</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


    <string name="action_settings">Settings</string>
    <string name="enterName">Enter a display name:</string>
    <string name="submitName">Start</string>
    <string name="call">Call Contact</string>
    <string name="selectContact">Select a contact to call: </string>
    <string name="update">Update Contacts</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_make_call">UDPChat</string>
    <string name="calling">"Calling: "</string>
    <string name="mute">Mute Mic</string>
    <string name="endCall">End Call</string>
    <string name="title_activity_receive_call">UDPChat</string>
    <string name="incomingCall">"Incoming call "</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="write_your_message">Write your message</string>
    <string name="title_activity_user_profile">activity_UserProfile</string>
    <string name="title_activity_help">help_activity</string>

</resources>
