<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".activity_setting_up">

        <TextView
            android:id="@+id/textLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="124dp"
            android:fontFamily="@font/ubunturegular"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:id="@+id/line_view"
            android:layout_width="70dp"
            android:layout_height="10dp"
            android:background="@drawable/line"
            app:layout_constraintStart_toStartOf="@+id/textLogo"
            app:layout_constraintTop_toBottomOf="@+id/textLogo" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ubunturegular"
            android:text="@string/setting_up_message"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line_view" />

        <EditText
            android:id="@+id/first_name_input"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"

            android:contentDescription="@string/setting_up_input_placeholder_1"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text1"
            tools:ignore="EditableContentDescCheck" />

        <TextView
            android:id="@+id/first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubunturegular"
            android:text="@string/setting_up_input_label_1"
            android:textColor="@color/primary_blue"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/first_name_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/first_name_input" />

        <EditText

            android:id="@+id/last_name_input"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginTop="96dp"
            android:contentDescription="@string/setting_up_input_placeholder_2"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_name_input"
            tools:ignore="EditableContentDescCheck" />

        <TextView
            android:id="@+id/last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="124dp"
            android:fontFamily="@font/ubunturegular"
            android:text="@string/setting_up_input_label_2"
            android:textColor="@color/primary_blue"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/last_name_input"
            app:layout_constraintTop_toBottomOf="@+id/first" />

        <android.widget.Button
            android:id="@+id/my_button"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/continuebutton"
            android:fontFamily="@font/ubunturegular"
            android:text="@string/setting_up_button"
            android:textColor="@color/darkgrey"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>



