<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/black"
    tools:context=".activity_HomeScreen">

    <TextView
        android:id="@+id/chats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/ubunturegular"
        android:padding="@dimen/_2sdp"
        android:text="@string/home_screen_title"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toEndOf="@+id/searchimage"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/searchimage"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"

        android:background="@drawable/rounded_imageview"
        android:padding="@dimen/_3sdp"
        android:src="@drawable/ic_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/userlist"
        android:layout_width="36dp"
        android:layout_height="36dp"

        android:layout_marginTop="36dp"
        android:src="@drawable/icon_wifi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.776"
        app:layout_constraintStart_toEndOf="@+id/chats"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="800dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/chat_content"
        app:layout_constraintTop_toBottomOf="@+id/chats"
        tools:layout_editor_absoluteX="0dp">

        <ListView
            android:id="@+id/recentchat"
            android:layout_width="match_parent"
            android:layout_height="885dp"
            tools:listitem="@layout/current_chatitem" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/navigationframe"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:background="@drawable/navigation_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="@dimen/_34sdp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/chatIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/chat_icon"
                app:tint="@color/primary_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/ubunturegular"
                android:text="@string/navigation_one"

                android:textColor="@color/primary_blue"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />
        </LinearLayout>
        <!-- Calls Icon and Text -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/callsIcon"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="11dp"
                android:src="@drawable/call_icon" />

            <TextView
                android:id="@+id/callText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/ubunturegular"
                android:text="@string/navigation_two"
                android:textAlignment="center"
                android:textColor="@color/darkgrey"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/_34sdp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/settingsIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="1dp"
                android:src="@drawable/settings" />

            <TextView
                android:id="@+id/settingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubunturegular"
                android:text="@string/navigation_three"
                android:textColor="@color/darkgrey"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />
        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>